WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166406
TileGrid revalidates tiles twice during flush, first with wrong visible rect
https://bugs.webkit.org/show_bug.cgi?id=166406
Summary
TileGrid revalidates tiles twice during flush, first with wrong visible rect
Tim Horton
Reported
2016-12-21 17:56:40 PST
TileGrid revalidates tiles twice during flush, first with wrong visible rect
Attachments
Patch
(1.89 KB, patch)
2016-12-21 17:57 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-12-21 17:57:07 PST
Created
attachment 297643
[details]
Patch
WebKit Commit Bot
Comment 2
2016-12-21 19:07:17 PST
Comment on
attachment 297643
[details]
Patch Clearing flags on attachment: 297643 Committed
r210095
: <
http://trac.webkit.org/changeset/210095
>
WebKit Commit Bot
Comment 3
2016-12-21 19:07:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-01-06 17:47:52 PST
<
rdar://problem/29912221
>
WebKit Commit Bot
Comment 5
2017-01-26 13:42:34 PST
Re-opened since this is blocked by
bug 167464
Simon Fraser (smfr)
Comment 6
2017-02-07 10:30:20 PST
Re-landed in
http://trac.webkit.org/r211766
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug